# repohop

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install.ps1  uninstall.ps1
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PRD.md  RELEASE.md  ROADMAP.md  SESSION_COMPATIBILITY.md
docs/research/: REFERENCES.md
src/: cli.rs  config.rs  doctor.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs  update.rs
src/db/: launches.rs  migrate.rs  mod.rs  projects.rs
src/discover/: claude.rs  codex.rs  grok.rs  mod.rs  opencode.rs
src/git/: mod.rs
src/launch/: mod.rs  process.rs
src/project/: mod.rs  model.rs  rank.rs  scan.rs  service.rs
src/provider/: claude.rs  codex.rs  command_spec.rs  detect.rs  grok.rs  mod.rs  opencode.rs  registry.rs  sessions_claude.rs  sessions_codex.rs  sessions_grok.rs  sessions_opencode.rs  traits.rs
src/ui/: app.rs  hop.rs  mod.rs  picker.rs  timefmt.rs
