[package]
name = "repohop"
version = "0.1.0"
edition = "2021"
description = "A local-first workspace router for AI coding CLIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/superdaobo/repohop"
keywords = ["cli", "ai", "codex", "claude", "worktree"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.74"

[[bin]]
name = "rhop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
